Assignment 1 fixing broken css, adding about page

--- a/web/indexStyle.css
+++ b/web/indexStyle.css
@@ -1,3 +1,7 @@
+body {
+    background-color: lightgray;
+}
+
 .header {
     background-color: cornflowerblue;
     border-bottom-style: solid;
@@ -11,13 +15,14 @@
     border-style: solid;
     border-color: black;
     border-bottom-width: 2px;
-    text-align: left;
+    text-align: center;
+}
+
+.bordered:hover {
+    background-color: rgb(0, 138, 46);
+    color: white; 
 }
 
 h1 {
     font-family: Tahoma;
-}
-
-body {
-    background-color: lightgray;
 }
